# car-scr

./: CMakeLists.txt  Main.qml  main.cpp  resourcesa.qrc
HMI/: AC.qml  ControlCenter.qml
Interface/: Interface.cpp  Interface.h
